@@ -1,3 +1,7 @@
+1999-11-16  Harri Porten  <porten@kde.org>
+
+	* docking.cpp: ported to make use of new KDockWidget
+
 1999-10-03  Harri Porten  <porten@kde.org>
 
 	* support automatic DNS detection if pppd >= 2.3.7.
